fix header z-index

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,6 +4,7 @@
   max-width: var(--max-width);
   height: var(--header-height);
   background-color: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(3px);
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -14,6 +15,7 @@
   right: 0;
   padding: 0 20px;
   border-bottom: 1px solid var(--orage-color);
+  z-index: 999;
 }
 
 .logo h1 {
